<resources>
    <string name="app_name">Stym</string>
    <string name="activity_main_register_hint">Register</string>
    <string name="activity_main_first_name_hint">First Name</string>
    <string name="activity_main_last_name_hint">Last Name</string>
    <string name="activity_main_company_hint">Company</string>
    <string name="activity_main_address_hint">Address</string>
    <string name="activity_main_city_hint">City</string>
    <string name="activity_main_state_hint">State</string>
    <string name="activity_main_zip_code_hint">Zip Code</string>
    <string name="activity_main_phone_hint">Phone</string>
    <string name="activity_main_email_hint">Email</string>
    <string name="activity_main_password_hint">Password</string>
    <string name="activity_main_create_account_hint">Create Account</string>
    <string name="landing_page_stym_name">Stym name</string>
    <string name="landing_page_description_stym">this is description of the Stym folder</string>
    <string name="landing_page_date">12/14/2022</string>
    <string name="landing_page_tracks">45 tracks</string>
    <string name="username">Username</string>
    <string name="login_page_login">login</string>
    <string name="landing_page_share">SHARE</string>
    <string name="stym_item_artwork_description">Stym artwork</string>
</resources>