<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp">
    <RelativeLayout
        android:background="@color/teal_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp"
            android:id="@+id/card_view_icon_container">
            <ImageView
                android:id="@+id/image_view_stym_icon"
                android:layout_width="80dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                android:layout_height="80dp"
                android:contentDescription="@string/stym_item_artwork_description" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif-black"
            android:textSize="16sp"
            android:layout_alignTop="@id/card_view_icon_container"
            android:layout_height="wrap_content"
            android:text="@string/landing_page_stym_name"
            android:layout_toEndOf="@id/card_view_icon_container"/>

        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="match_parent"
            android:fontFamily="sans-serif"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/landing_page_description_stym"
            android:layout_toEndOf="@id/card_view_icon_container"
            android:layout_below="@id/text_view_title" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/landing_page_date"
            android:layout_toEndOf="@id/card_view_icon_container"
            android:layout_below="@id/text_view_description" />
        <TextView
            android:id="@+id/text_view_tracks"
            android:layout_width="match_parent"
            android:textSize="13sp"
            android:layout_height="wrap_content"
            android:hint="@string/landing_page_tracks"
            android:fontFamily="sans-serif"
            android:layout_toEndOf="@id/card_view_icon_container"
            android:layout_below="@id/text_view_date" />

        <com.google.android.material.button.MaterialButton
            android:layout_toEndOf="@id/card_view_icon_container"
            android:layout_below="@id/text_view_tracks"
            android:padding="12dp"
            android:background="@color/blue_dark"
            android:layout_marginTop="16dp"
            android:id="@+id/button_create_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/landing_page_share"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>